Add swagger to query 2 collections. (week2 assignments)
